--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
-div{
+body{
     background-color: black;
+}
+.light {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
+.team{
+    display: block;
+    margin: 20px;
+    padding: 20px;
+    position: relative; 
+}
+#stlw{
+    
+    visibility: hidden;
+    width: auto;
+    height: 400px;
+}
+#chcw{
+    visibility: hidden;
+    width: auto;
+    height: 400px;
+} 
+.winner{
+    position: absolute;
+    left: 500;
+    top: 200;
 }
